--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property=”og:image” content="https://user-images.githubusercontent.com/44101756/106958182-3dd09580-66f6-11eb-82a5-952910e7ca49.png"/>
     <meta
       name="Eric Lingren"
       content="Eric Lingren Portfolio"
