--- a/public/index.html
+++ b/public/index.html
@@ -5,29 +5,18 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="title" property="og:title" content="Eric Lingren" />
+    <meta property="og:type" content="website" />
+    <meta name="description" property="og:description" content="Eric Lingren Portfolio Site" />
+    <meta name="author" content="Eric Lingren" />
     <meta 
+      name="image"
       property=”og:image” 
       content="%PUBLIC_URL%/linkedin-thumbnail.png"
     />
-    <meta
-      name="Eric Lingren"
-      content="Eric Lingren Portfolio"
-    />
+    <meta name="Eric Lingren" content="Eric Lingren Portfolio"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>Eric Lingren</title>
   </head>
   <body>
