adding meta tag for thumbnail

--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,13 @@
     <meta 
       name="image"
       property=”og:image” 
-      content="%PUBLIC_URL%/linkedin-thumbnail.png"
+      content="https://user-images.githubusercontent.com/44101756/106961284-973ac380-66fa-11eb-831d-3a669d65c544.png"
     />
+    <!-- <meta 
+      name="image"
+      property=”og:image” 
+      content="%PUBLIC_URL%/linkedin-thumbnail.png"
+    /> -->
     <meta name="Eric Lingren" content="Eric Lingren Portfolio"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
