improving meta info

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <meta property="og:type" content="website" />
     <meta name="description" property="og:description" content="Eric Lingren Portfolio Site" />
     <meta name="author" content="Eric Lingren" />
+    <meta property="og:url" content="https://www.ericlingren.com/" />
     <meta 
       name="image"
       property=”og:image” 
