--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,18 @@
 <html lang="en">
   <head>
     <meta 
-      name="image"
-      property=”og:image” 
+      property=”og:image”
       content="https://user-images.githubusercontent.com/44101756/106961284-973ac380-66fa-11eb-831d-3a669d65c544.png"
     />
-    <meta name="title"        property="og:title"       content="Eric Lingren" />
-    <meta name="url"          property="og:url"         content="https://www.ericlingren.com/" />
-    <meta name="description"  property="og:description" content="Eric Lingren Portfolio Site" />
-    <meta name="type"         property="og:type"        content="website" />
-    <meta charset="utf-8" />
+    <meta property="og:title"       content="Eric Lingren" />
+    <meta property="og:url"         content="https://www.ericlingren.com/" />
+    <meta property="og:description" content="Eric Lingren Portfolio Site" />
+    <meta property="og:type"        content="website" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="author" content="Eric Lingren" />
     <meta name="Eric Lingren" content="Eric Lingren Portfolio"/>
+    <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
