improving meta info

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta 
-      property=”og:image”
-      content="https://user-images.githubusercontent.com/44101756/106961284-973ac380-66fa-11eb-831d-3a669d65c544.png"
-    />
+    <meta property=”og:image”       content="%PUBLIC_URL%/in-thumb.png" />
     <meta property="og:title"       content="Eric Lingren" />
     <meta property="og:url"         content="https://www.ericlingren.com/" />
     <meta property="og:description" content="Eric Lingren Portfolio Site" />
