improving meta info

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta property=”og:image”       content="%PUBLIC_URL%/in-thumb.png" />
+    <meta property=”og:image”       content="https://live.staticflickr.com/65535/50909014103_9c4ea26873_z.jpg" />
     <meta property="og:title"       content="Eric Lingren" />
     <meta property="og:url"         content="https://www.ericlingren.com/" />
     <meta property="og:description" content="Eric Lingren Portfolio Site" />
