--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <title>Eric Lingren</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Eric Lingren - Software developer portfolio site</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
